# pico-dht22-library

./: CMakeLists.txt  main.c
dht22/: CMakeLists.txt  dht22.c  dht22.h
